--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack -w & nodemon -e js,html ./server/index.js",
-    "test": "mocha ./tests/*.spec.js --watch --compilers js:babel-register"    
+    "test": "mocha ./tests/*.spec.js --watch --compilers js:babel-register"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +13,12 @@
   "dependencies": {
     "ajax-request": "^1.2.3",
     "axios": "^0.16.2",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "cheerio": "^1.0.0-rc.2",
     "d3": "^4.10.0",
     "express": "^4.14.1",
+    "jquery": "^3.2.1",
     "mousetrap": "^1.6.1",
     "path": "^0.12.7",
     "react": "^15.4.2",
